feat(eidos#84): AgentRegistry.find() returns match metadata
ResolvedCapability record, AgentMatch record, MatchDegree Comparable,
CapabilityResolver.resolve() returns ResolvedCapability, both registry
implementations updated, probe() updated, all callers migrated.

Closes #84

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>